plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.owasp.dependencycheck' version '12.2.2'
	id 'jacoco'
	id 'com.github.ben-manes.versions' version '0.54.0'
	id 'com.github.spotbugs' version '6.5.8'
	id 'org.graalvm.buildtools.native' version '0.10.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

ext {
	set('tomcat.version', '10.1.55')
	set('jackson.version', '2.18.8')
	set('netty.version', '4.1.135.Final')
	set('spring-security.version', '6.5.9')
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.fasterxml.jackson.module:jackson-module-blackbird'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'io.micrometer:micrometer-tracing-bridge-otel'
	implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
	
	// Database Migration
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'

	// SOTA OAuth2/JWT Resource Server Security
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.1'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.13.0'
}

spotbugs {
	toolVersion = '4.9.3'
	ignoreFailures = true
	effort = 'max'
	reportLevel = 'high'
	excludeFilter = file("spotbugs-exclude.xml")
}

tasks.register("writeAotClasspath") {
    doLast {
        def cp = sourceSets.aot.runtimeClasspath.asPath
        file("build/aot-cp.txt").text = cp
    }
}
tasks.register("writeMainClasspath") {
    doLast {
        def cp = sourceSets.main.runtimeClasspath.asPath
        file("build/main-cp.txt").text = cp
    }
}

tasks.named('test') {
	useJUnitPlatform()
	maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
	environment "SPRING_SECURITY_PASSWORD", "admin-password"
	systemProperty 'spring.cache.type', 'simple'
	finalizedBy jacocoTestReport
}

tasks.named("processTestAot") {
    enabled = false
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		csv.required = true
		html.required = true
	}
}

dependencyCheck {
	failBuildOnCVSS = 7.0f
	formats = ['HTML', 'JSON']
}

tasks.named("spotbugsAot") {
    enabled = false
}
